Enable ordering of cards to be changed and preserved Breaks multiplayer

--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <base href="<%= htmlWebpackPlugin.options.baseUrl %>" />
     <link rel="stylesheet" href="style.css"></link>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="cards">
+        <p>Event Log</p>
         <div id="events"></div>
         <div id="form"></div>
     </div>
