UI changes and add neater way to handle self discard

--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,11 @@
   </head>
   <body>
     <div id="cards">
+        <h1>Can I Have That Online</h1>
         <p>Event Log</p>
-        <div id="events"></div>
+        <div id="events">
+          <div id="anchor"></div>
+        </div>
         <div id="form"></div>
     </div>
   </body>
