Notify when waiting for another user

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
         <div id="events">
           <div id="anchor"></div>
         </div>
+        <div id="waiting"></div>
         <div id="form"></div>
     </div>
   </body>
